--- a/front-end/style.css
+++ b/front-end/style.css
@@ -29,7 +29,7 @@
 
           }
           .loader {
-            /* position: absolute; */
+            position: absolute;
             top: calc(50% - 32px);
             left: calc(50% - 32px);
             width: 64px;
